4B/cs444/tests/pass/pass_staticmethoddeclaration.joos
/* pass: static method declaration */
public class A {
  public A() {}
  public static int m() {
    return 42;
  }
}

