4B/cs444/tests/fail/fail_finalfields.joos
/* fail: final field declaration */
  public class A {
    public A() {}
    public final int x = 42;
  }

